--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,6 @@
 	position: fixed;
 	left: 70px;
 	right: 0;
-	padding: 20px;
 	top: 0;
 	bottom: 0;
 	
@@ -103,15 +102,68 @@ hr {
 
 
 .img_center {
-	width: 50%;
-	margin: 0 25% 0 25%;
+	width: 400px;
+	position: relative;
+	left: 50%;
+	margin-left: -200px
+}
+
+#loading {
+	position: absolute;
+	
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	
+	z-index: 2;
+	background-color: #e0e0e0;
+	
+	transition: opacity 0.5s;
+}
+
+#loading img {
+	position: absolute;
+	
+	width: 90px;
+	left: 50%;
+	margin-left: -45px;
+	top: 50%;
+	margin-top: -45px;
+	
+	animation: rotation 2s infinite;
+}
+
+@keyframes rotation {
+    0%   {transform: rotate(0deg);}
+    50%  {transform: rotate(180deg);}
+    100% {transform: rotate(0deg);}
+}
+
+h1 {
+	margin-bottom: 0;
 }
 
 .category {
 	background-color: white;
 	padding: 20px;
+	margin: 20px;
 	border: 1px solid #c0c0c0;
 	/* 
 		ajouter une ombre
 	*/
+}
+
+iframe {
+	position: absolute;
+	display: none;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	margin: 0;
+	padding: 0;
+
+	border-width: 0;
 }
