--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,13 +46,13 @@
 	background-color: rgb(45, 53, 145);
 }
 
-#side_menu li {
+.section {
 	position: relative;
 	width: 50px;
 	height: 50px;
 	margin: 10px;
 	
-	background-color: rgb(68, 200, 255);
+	background-color: rgb(88, 220, 255);
 	border-radius: 10px;
 	list-style: none;
 	
@@ -61,13 +61,33 @@
 	background-size: cover;
 }
 
-#side_menu li:hover {
+.section:hover {
 	background-color: lightblue;
 	cursor: pointer;
 	
 	transform: scale(0.9);
 }
 
+.section span {
+	display: none;
+	background-color: rgb(122, 192, 67);
+	color: #fff;
+	text-align: center;
+	padding: 5px 10px;
+	border-radius: 6px;
+	white-space: nowrap;
+
+	position: absolute;
+	z-index: 2;
+	
+	top: 12px;
+    left: 105%; 
+}
+
+.section:hover span {
+	display: block;
+	transform: none;
+}
 
 #home_btn {
 	background-image: url('../img/sections/star.png');
