Work in progress: animation on news feed already registered

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -294,3 +294,26 @@ iframe {
     transform: scale(0.01) translate3d(0,0,0);
   }
 }
+
+@keyframes bounceWarning{
+  0%{
+	opacity: 1;
+    transform: translate3d(-20px,0,0);
+  }
+  25%{
+	  opacity: 1;
+    transform: translate3d(20px,0,0);
+  }
+  50%{
+	  opacity: 1;
+    transform: translate3d(-20px,0,0);
+  }
+  75%{
+	  opacity: 1;
+    transform: translate3d(20px,0,0);
+  }
+  100%{
+	  opacity: 1;
+	transform: translate3d(0,0,0);
+  }
+}
