--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,8 @@ button:hover {
 	overflow: auto;
 	background-color: #e0e0e0;
 	transform: translateZ();
+	
+	z-index: 1;
 }
 
 #main_wrapper:hover {
@@ -75,6 +77,10 @@ button:hover {
 	background-color: rgb(45, 53, 145);
 }
 
+#side_menu::-webkit-scrollbar {
+	display: none;
+}
+
 .scroll_btn {
 	opacity: 0;
 	
@@ -90,7 +96,7 @@ button:hover {
 	width: 50px;
 	height: 30px;
 	
-	position: absolute;
+	position: fixed;
 	bottom: -3px;
 }
 
@@ -100,7 +106,10 @@ button:hover {
 	background-color: rgb(95, 103, 195);
 }
 
-#side_menu:hover .scroll_btn {
+.overflowed:hover {
+	padding: 30px 0;
+}
+.overflowed:hover .scroll_btn {
 	opacity: 1;
 }
 
@@ -137,7 +146,7 @@ button:hover {
 	white-space: nowrap;
 
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	
 	top: 12px;
     left: 110%; 
