--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 	blue: rgb(39, 171, 226)
 	darkblue: rgb(45, 53, 145)
 	green: rgb(122, 192, 67)
-	orange: rgb(243, 123, 32) 
+	orange: rgb(243, 123, 32)
 	pink: rgb(235, 10, 141)
 */
 
@@ -13,7 +13,7 @@
 	-ms-transition: all 200ms ease-out;
 	-o-transition: all 200ms ease-out;
 	transition: all 200ms ease-out;
-	
+
 	user-select: none;
 	cursor: default;
 	outline: none;
@@ -23,14 +23,14 @@ input {
 	padding: 5px;
 	margin-right: 18px;
 	height: 38px;
-	
+
 	cursor: text;
 }
 button {
 	border: 5px solid white;
 	color: white;
 	background-color: lightgray;
-	
+
 	font-size: 1em;
     text-transform: uppercase;
     font-weight: bold;
@@ -52,11 +52,11 @@ button:hover {
 	right: 0;
 	top: 0;
 	bottom: 0;
-	
+
 	overflow: auto;
 	background-color: #e0e0e0;
 	transform: translateZ();
-	
+
 	z-index: 1;
 }
 
@@ -73,7 +73,7 @@ button:hover {
 	bottom: 0;
 	left: 0;
 	width: 70px;
-	
+
 	background-color: rgb(45, 53, 145);
 }
 
@@ -83,19 +83,19 @@ button:hover {
 
 .scroll_btn {
 	opacity: 0;
-	
+
 	color: darkblue;
 	border: 3px solid darkblue;
 	background-color: rgb(75, 83, 175);
-	
+
 	padding: 1px;
 	font-weight: bold;
 	font-size: 1.3em;
-	
+
 	margin-left: 10px;
 	width: 50px;
 	height: 30px;
-	
+
 	position: fixed;
 	bottom: -3px;
 }
@@ -127,11 +127,11 @@ button:hover {
 	width: 50px;
 	height: 50px;
 	margin: 10px;
-	
+
 	background-color: rgb(88, 220, 255);
 	border-radius: 10px;
 	list-style: none;
-	
+
 	background-repeat: no-repeat;
 	background-position: left top;
 	background-size: cover;
@@ -156,9 +156,9 @@ button:hover {
 
 	position: absolute;
 	z-index: 3;
-	
+
 	top: 12px;
-    left: 110%; 
+    left: 110%;
 }
 
 .section:hover div {
@@ -170,7 +170,7 @@ button:hover {
 .subscribe {
 	background-color: #c0c0c0;;
 	background-image: url('../img/plus.png');
-	
+
 	width: 40px;
 	height: 40px;
 	margin: 20px 15px 15px 15px;
@@ -215,6 +215,20 @@ button:hover {
 	right: -3px;
 }
 
+.delete {
+	background-color: #fa3e3e;
+	border-radius: 2px;
+	color: white;
+	font-weight: bold;
+
+	padding: 1px 3px;
+	font-size: 14px;
+
+	position: absolute;
+	top: -3px;
+	left: -3px;
+}
+
 #home_btn {
 	background-image: url('../img/sections/star.png');
 }
@@ -256,27 +270,27 @@ hr {
 
 #loading {
 	position: absolute;
-	
+
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	
+
 	z-index: 2;
 	background-color: #e0e0e0;
-	
+
 	transition: opacity 0.5s;
 }
 
 #loading img {
 	position: absolute;
-	
+
 	width: 90px;
 	left: 50%;
 	margin-left: -45px;
 	top: 50%;
 	margin-top: -45px;
-	
+
 	animation: rotation 2s infinite;
 }
 
@@ -295,7 +309,7 @@ h1 {
 	padding: 20px;
 	margin: 20px;
 	border: 1px solid #c0c0c0;
-	/* 
+	/*
 		ajouter une ombre
 	*/
 }
@@ -319,22 +333,22 @@ iframe {
 	background-color: #e0e0e0;
 	border: 1px solid gray;
 	border-radius: 5px;
-	
+
 	position: absolute;
 	margin: auto;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	
+
 	width: 340px;
 	height: 60px;
 	display: none;
-	
+
 	padding: 20px;
 	z-index: 2;
-	
-	
+
+
 	opacity: 0;
 	animation-name: bounceIn;
 	animation-duration: 450ms;
@@ -400,7 +414,7 @@ iframe {
 	100%{
 		opacity: 1;
 		transform: translate3d(0,0,0);
-		
+
 		border: 2px solid red;
 		background-color: #ffcccc;
 	}
