--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -307,16 +307,23 @@ h1 {
 .category {
 	background-color: white;
 	padding: 20px;
-	margin: 20px;
+
+	position: absolute;
+  bottom: 20px;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+
 	border: 1px solid #c0c0c0;
 	/*
 		ajouter une ombre
 	*/
 }
 
-iframe {
+.frame {
 	position: absolute;
 	display: none;
+	visibility: hidden;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -326,6 +333,11 @@ iframe {
 	padding: 0;
 
 	border-width: 0;
+}
+
+.frame-show {
+	visibility: visible;
+	display: block;
 }
 
 
