--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,6 +227,14 @@ button:hover {
 	position: absolute;
 	top: -3px;
 	left: -3px;
+
+	opacity: 0;
+	visibility: hidden;
+}
+
+.delete-show {
+	visibility: visible;
+	opacity: 1;
 }
 
 #home_btn {
@@ -330,7 +338,7 @@ h1 {
 .frame {
 	position: absolute;
 	/*display: none; */
-	visibility: hidden; 
+	visibility: hidden;
 	opacity: 0;
 	top: 0;
 	left: 0;
