Added picture for "Excel d'or" button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,8 +244,8 @@ button:hover {
 #tuto_btn {
 	background-image: url('../img/sections/star.png');
 }
-#faucon_btn {
-	background-image: url('../img/sections/new/faucondor.png');
+#excel_btn {
+	background-image: url('../img/sections/new/excel_dor.png');
 }
 #logoinserter_btn {
 	background-image: url('../img/sections/new/logoinserter.png');
