--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -377,15 +377,12 @@ h1 {
 	border: 1px solid gray;
 	border-radius: 5px;
 
-	position: absolute;
+	position: relative;
 	margin: auto;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	margin-top: 20%;
 
 	width: 340px;
-	height: 60px;
+	height: auto;
 	display: none;
 
 	padding: 20px;
@@ -397,6 +394,11 @@ h1 {
 	animation-duration: 450ms;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
+}
+
+#subscription_text {
+	margin-bottom: 0;
+	position: relative;
 }
 
 @keyframes bounceIn {
