--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,10 +190,7 @@ button:hover {
 
 	background-size: 70%;
 	background-position: center;
-
-	/*
-		TODO : ajouter un gif en background-image
-	*/
+	background-image: url('../img/new_section_loading.gif');
 }
 .added_site div {
 	background-color: rgb(243, 123, 32);
