--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,7 +244,29 @@ button:hover {
 	visibility: hidden;
 }
 
-.delete-show {
+.mute {
+	border-radius: 2px;
+	background: #4285f4 url('../img/speaker.png');
+	background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+
+	padding: 1px 3px;
+	width: 6px;
+	height: 6px;
+
+	position: absolute;
+	top: -3px;
+	right: -3px;
+
+	/*opacity: 0;
+	visibility: hidden;*/
+
+	visibility: visible;
+	opacity: 1;
+}
+
+.delete-show, .mute-show {
 	visibility: visible;
 	opacity: 1;
 }
