--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,6 +215,13 @@ button:hover {
 	transform: none;
 }
 
+.tutorialSectionFocus {
+	position: absolute;
+	width: 70px;
+	height: 70px;
+	top: 72px;
+}
+
 
 .subscribe {
 	background-color: #c0c0c0;;
