--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -444,6 +444,17 @@ h1 {
 	/*box-shadow: 0px 0px 50px -10px black;*/
 }
 
+#version {
+	position: absolute;
+    right: 0;
+    top: 0;
+    border-bottom: 1px solid lightgray;
+    border-left: 1px solid lightgrey;
+    font-size: 0.9em;
+    color: gray;
+    padding: 0 10;
+}
+
 #lang-select {
 	position:absolute;
 	top:10px;
