--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,20 +456,30 @@ h1 {
 	margin-bottom: 0;
 }
 
-.category {
-	background-color: white;
-	padding: 20px;
+.home {
 
+	padding: 20px;
 	position: absolute;
 	bottom: 20px;
 	top: 20px;
 	left: 20px;
 	right: 20px;
-	opacity: 1;
 
+	background-color: white;
 	border: 1px solid #c0c0c0;
 	transition: none;
 	/*box-shadow: 0px 0px 50px -10px black;*/
+}
+
+.homeWrapper {
+	background-color: #e0e0e0;
+
+	position: absolute;
+	bottom: 0px;
+	top: 0px;
+	left: 0px;
+	right: 00px;
+	opacity: 1;
 }
 
 #version {
