icone + rapide modif

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -257,7 +257,7 @@ button:hover {
 	list-style: none;
 
 
-	background-image: url('../img/sections/star.png');
+	background-image: url('../img/sections/logo.png');
 	background-size: cover;
 }
 
