--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -439,12 +439,17 @@ hr {
 	position: absolute;
 
 	left: 50%;
-	margin-left: -45px;
+	margin-left: -90px;
 	top: 50%;
-	margin-top: -45px;
+	margin-top: -90px;
 
-	width: 90px;
+	width: 180px;
+}
+
+#loading_logo {
 	animation: rotation 2s infinite;
+	width: 100px !important;
+    margin: -50px -50px !important;
 }
 
 .ldBar-label {
@@ -474,6 +479,8 @@ h1 {
 	border: 1px solid #c0c0c0;
 	transition: none;
 	/*box-shadow: 0px 0px 50px -10px black;*/
+
+	overflow: hidden;
 }
 
 .homeWrapper {
@@ -494,7 +501,7 @@ h1 {
     border-bottom: 1px solid lightgray;
     border-left: 1px solid lightgrey;
     font-size: 0.9em;
-    color: gray;
+    color: lightgray;
     padding: 0 10;
 }
 
