--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,11 +27,14 @@ input {
 	margin-right: 17px;
 	height: 38px;
 
+	border: 1px solid black;
+	border-radius: 5px;
+	
 	cursor: text;
 }
 button {
 	border: 2px solid white;
-	border-radius: 10px;
+	border-radius: 5px;
 	color: white;
 	background-color: transparent;
 
